--- a/junitConcepts/pom.xml
+++ b/junitConcepts/pom.xml
@@ -24,7 +24,7 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
+                <configuration>                   
                     <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
                         <version>3.0</version>
                         <usePhrasedFileName>true</usePhrasedFileName>
@@ -42,7 +42,20 @@
                             junit.jupiter.testinstance.lifecycle.default = per_class
                         </configurationParameters>
                     </properties>
-                </configuration>                                
+                </configuration>                                        
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
