--- a/junitConcepts/pom.xml
+++ b/junitConcepts/pom.xml
@@ -24,7 +24,8 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>                   
+                <configuration>            
+                    <testFailureIgnore>true</testFailureIgnore>       
                     <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
                         <version>3.0</version>
                         <usePhrasedFileName>true</usePhrasedFileName>
