--- a/springUnitTeste/pom.xml
+++ b/springUnitTeste/pom.xml
@@ -33,6 +33,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+                        <plugin>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>3.0.0-M5</version>
+                            <configuration>            
+                                <testFailureIgnore>true</testFailureIgnore>       
+                                <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
+                                    <version>3.0</version>
+                                    <usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
+                                    <usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
+                                    <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
+                                </statelessTestsetReporter>
+                            </configuration>                                        
+                        </plugin>
 		</plugins>
 	</build>
 
